# ai-career-transition-planner

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  utils.py
backend/app/ai/: base.py  gemini_provider.py  groq_provider.py  provider_factory.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  career.py  resume.py  roles.py  router.py
backend/app/data/: roles_ph.json  seed.py  skills_taxonomy.json  transitions.json
backend/app/models/: __init__.py  career_graph.py  resume.py  role.py  skill.py  user.py
backend/app/schemas/: auth.py  resume.py  role.py
backend/app/services/: auth.py  career_graph.py  dream_job_planner.py  embedding_service.py  matching_service.py  meta_model.py  resume_parser.py  roadmap_generator.py  role_insights.py  salary_parser.py  self_assessment.py  skill_extractor.py  success_stories.py
backend/scripts/: enrich_roles.py  fix_roles.py  validate_fix_roles.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/auth/: auth-guard.tsx
frontend/src/components/career/: match-card.tsx  roadmap-view.tsx  role-picker.tsx  transition-path.tsx
frontend/src/components/layout/: dashboard-shell.tsx  header.tsx  sidebar.tsx
frontend/src/context/: session-context.tsx
frontend/src/lib/: api-client.ts  constants.ts  salary.ts
frontend/src/types/: auth.ts  career.ts  resume.ts
(+17 files in other folders)
